--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
 			  <h1>Our Story</h1>
 				<br/>
 			</div>
-			<div class="info-div">
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. Aenean in accumsan mauris, at iaculis purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eleifend dapibus lorem non sagittis.</p>
-				<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. -Someone</blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. Aenean in accumsan mauris, at iaculis purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eleifend dapibus lorem non sagittis. Sed a sem condimentum, bibendum nulla et, porta odio. Nam ac dolor aliquam nisl cursus congue. Nunc sed porttitor odio, quis hendrerit magna. Proin dapibus purus id euismod auctor.</p>
+			<div class="info-div" style="font-size: 20px;">
+			  <p>It all started in 1968. We began as a small diner, founded by Mr. W. Wilkenstein. Wilkenstein started the restaurant to give that same feeling he had gotten visint diners throughout his life.</p>
+				<blockquote>Diners were always the place I felt most at home. The warm atmosphere of walking in through the doors on a bright Saturday morning, sitting down and having a cup of coffee while reading the paper, those memories will never leave me. - Mr. Wilkenstein (1940-2020)</blockquote>
+				<p>From there, our popularity grew as people from all over would come to eat our famous breakfast. Today, we still strive for that same experience for which Mr. Wilkenstein created this restaurant to give.</p>
 			</div>
 			</section>
 		</main>
