--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 				<br/>
 			</div>
 			<div class="info-div" style="font-size: 20px;">
-			  <p>It all started in 1968. We began as a small diner, founded by Mr. W. Wilkenstein. Wilkenstein started the restaurant to give that same feeling he had gotten visit diners throughout his life.</p>
+			  <p>It all started in 1968. We began as a small diner, founded by Mr. W. Wilkenstein. Wilkenstein started the restaurant to give that same feeling he had gotten by visiting diners throughout his life.</p>
 				<blockquote>Diners were always the place I felt most at home. The warm atmosphere of walking in through the doors on a bright Saturday morning, sitting down and having a cup of coffee while reading the paper, those memories will never leave me. - Mr. Wilkenstein (1940-2020)</blockquote>
 				<p>From there, our popularity grew as people from all over would come to eat our famous breakfast. Today, we still strive for that same experience for which Mr. Wilkenstein created this restaurant to give.</p>
 			</div>
